--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,16 @@
-<p>
-  <b>Booking number:</b> <%= @booking.id %>
-</p>
-
-<%= render partial: 'flights/flight_info', locals: { flight: @flight } %>
-
-<h2>Passengers</h2>
-<% @passengers.each do |passenger| %>
-  <%= render partial: 'passengers/passenger_info', locals: { passenger: passenger } %>
-<% end %>
+<div class="booking-show">
+  <div>
+    <h1>Booking number:</b> <%= @booking.id %>
+  </div>
+  
+  <div class="flight">
+    <%= render partial: 'flights/flight_info', locals: { flight: @flight } %>
+  </div>
+  
+  <h2>Passengers</h2>
+  <div class="passengers">
+    <% @passengers.each do |passenger| %>
+      <%= render partial: 'passengers/passenger_info', locals: { passenger: passenger } %>
+    <% end %>
+  </div>
+</div>
