--- a/app/views/passengers/_passenger_info.html.erb
+++ b/app/views/passengers/_passenger_info.html.erb
@@ -1,5 +1,4 @@
-<p>
-  <b>Name: </b><%= passenger.name %>
-  <br>
-  <b>Email: </b><%= passenger.email %>
-</p>
+<div class="passenger-info">
+  <div>Name: <%= passenger.name %></div>
+  <div>Email: <%= passenger.email %></div>
+</div>
