--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require_tree ./config/ 
+ *= require_tree ./mixins/ 
+ *= require_tree ./components/ 
+ *= require_tree ./layouts/
  *= require_self
  */
