--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,31 +1,35 @@
-<%= form_with model: @flight, method: :get do |form|%>
-  <p>
-    <%= form.label :departure_airport_id, 'Origin Airport: ' %>
-    <%= form.select :departure_airport_id, @airport_options, include_blank: 'Any Airport' %>
-  </p>
-  <p>
-    <%= form.label :arrival_airport_id, 'Destination Airport: ' %>
-    <%= form.select :arrival_airport_id, @airport_options, include_blank: 'Any Airport' %>
-  </p>
-  <p>
-    <%= form.label :deperature_date, 'Departure Date: ' %>
-    <%= form.select :departure_date, @date_options, include_blank: 'Any Date' %>
-  </p>
-  <p>
+<div class="flights-index">
+  <h1>Search for Flights</h1>
+  <%= form_with model: @flight, method: :get, class: 'search' do |form|%>
+    <div>
+      <%= form.label :departure_airport_id, 'Origin Airport: ' %>
+      <%= form.select :departure_airport_id, @airport_options, include_blank: 'Any Airport' %>
+    </div>
+    <div>
+      <%= form.label :arrival_airport_id, 'Destination Airport: ' %>
+      <%= form.select :arrival_airport_id, @airport_options, include_blank: 'Any Airport' %>
+    </div>
+    <div>
+      <%= form.label :departure_date, 'Departure Date: ' %>
+      <%= form.select :departure_date, @date_options, include_blank: 'Any Date' %>
+    </div>
     <%= form.submit value: 'Search Flights' %>
-  </p>
-<% end %>
-
-<% if @flights && !@flights.empty? %>
-  <%= form_with url: '/bookings/new', method: :get do |form| %>
-    <%= form.collection_radio_buttons :flight_id, @flights, :id, :to_radio, html_options = { checked: @flights.first.id } do |b| %>
-      <div>
-        <%= b.radio_button%>
-        <%= b.label %>
-      </div>
-    <% end %>
-    <%= form.submit 'Proceed to booking'%>
   <% end %>
-<% else %>
-  No flights
-<% end %>
+
+  <div class="flights">
+    <% if @flights && !@flights.empty? %>
+      <%= paginate @flights %>
+      <% @flights.each do |flight| %>
+        <div class="flight">
+          <%= render partial: 'flight_info', locals: { flight: flight } %>
+          <%= form_with url: '/bookings/new', method: :get do |form| %>
+            <%= form.hidden_field :flight_id, value: flight.id %>
+            <%= form.submit 'Proceed to Booking' %>
+          <% end %>
+        </div>
+      <% end %>
+    <% else %>
+      <div>No flights</div>
+    <% end %>
+  </div>
+</div>
